# internal/app/user/controller/user_controller.go
@@ -500,6 +500,7 @@ func (c *userController) Register(ctx *fiber.Ctx) error {
 // @Success 200 {object} response.Response{data=dto.UserLoginResponse}
 // @Failure 400 {object} response.ErrorResponse
 // @Failure 401 {object} response.ErrorResponse
+// @Failure 403 {object} response.ErrorResponse
 // @Failure 500 {object} response.ErrorResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/users/login [post]
